--- a/src/Pages/deleteItem/index.css
+++ b/src/Pages/deleteItem/index.css
@@ -16,9 +16,9 @@
 .productss {
     position: absolute;
     top: 12vh;
-    left: 50%;
+    left: 50vw;
     transform: translateX(-50%); 
-    width: 50vw;
+    width: 100vw;
     height: 80vh;
     padding: 0px 20px;
     overflow-y: scroll;
@@ -28,7 +28,7 @@
 }
 .columnn {
     float: left;
-    width: 25%;
+    width: 15%;
     padding: 0 10px;
     margin: 20px 0px;   
 }
