Added Category Function in Dashboard

--- a/src/Component/Products/products.css
+++ b/src/Component/Products/products.css
@@ -42,7 +42,7 @@
 
 .card {
 
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(150, 100, 100, 0.2); /* this adds the "card" effect */
     padding-top: 10px;
     text-align: center;
     background-color: white;
@@ -107,4 +107,7 @@
 
 } 
 
-
+.searchbar1 {
+    position: fixed;
+    top: 9vh;
+}
