--- a/src/Component/Searchbar/index.css
+++ b/src/Component/Searchbar/index.css
@@ -37,7 +37,8 @@
     padding: 10px;
     text-align: center;
     border-radius: 20px;
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
+    font-weight: 700;
 }
 
 .categorybar {
