gi convert ang % to vw/vh

--- a/src/Component/Navbar/index.css
+++ b/src/Component/Navbar/index.css
@@ -9,10 +9,10 @@
 
 .banner {
     width: 100vw;
-    height: 7vh;
+    height: 8vh;
     background-color: #35475F;
 
-
+    display: flex;
 
 }
 
@@ -20,15 +20,15 @@
 
 .title {
     width: 40vw;
-    float: left;
+    height: 8vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .title h1 {
-    margin: 1.5vh;
     color: #FFFFFF;
     font-size: 30px;
     text-transform: uppercase;
@@ -38,9 +38,11 @@
 /* for navigation bar */
 
 .navbar {
-    width: 50%;
-    float: right;
-    padding: 20px;
+    width: 50vw;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar ul {
@@ -60,7 +62,7 @@
 
     padding: 10px;
     letter-spacing: 1px;
-    animation: 0.3s;
+    
 }
 
 .navbar ul li a:hover{
