--- a/src/Pages/Dashboard/dashboard.css
+++ b/src/Pages/Dashboard/dashboard.css
@@ -89,8 +89,8 @@ table tr td {
     font-size: 13px;
     padding: 5px 0px;
     text-align: center;
-    background-color: #f1f1f1;
-
+    background-color: #ffffff;
+    letter-spacing: 2px;
     
 }
 
