--- a/src/Pages/Dashboard/dashboard.css
+++ b/src/Pages/Dashboard/dashboard.css
@@ -154,7 +154,7 @@ table tr td {
     left: 50%;
     transform: translate(-50%, -50%);
 
-
+    border-radius: 10px;
 
 }
 
@@ -167,14 +167,14 @@ table tr td {
 
 .hrr hr {
     width: 80%;
-    height: 5px;
+    height: 3px;
     background-color: #474545;
     border: 0px;
 }
 
 
 
-.totalcash {
+/* .totalcash {
     width: 100%;
     display: flex;
     text-align: center;
@@ -210,26 +210,109 @@ table tr td {
     padding: 10px 100px;
     background-color: #B5BDBD;
     border-radius: 50px;
-}
+} */
+
+
+
+/* cash */
 
 .cash {
     width: 100%;
+    height: 100px;
     display: flex;
-    text-align: center;
-
+    justify-content: space-around;
+    align-items: center;
     margin-top: 40px;
-
-
 }
 
 .cash h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.divinput {
+    width: 50%;
+}
+
+
+.divinput input {
+    width: 100%;
+    padding: 15px 0px;
+    border: 0px;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+}
+
+/* total cash */
+.totalcash {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.totalcash h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+
+.divtotalcash {
+    width: 51%;
+}
+
+.divtotalcash p {
+    width: 100%;
+    padding: 15px 0px;
+    border: 0px;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #FFFFFF;
+    color: black;
+}
+
+
+/* change */
+.change {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.change h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+.divchange {
+    width: 51%;
+}
+
+.divchange p {
+    width: 100%;
+    padding: 15px 0px;
+    border: 0px;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #FFFFFF;
+    color: black;
+}
+
+
+/* .cash h3 {
     color: #FFFFFF;
     width: 40%;
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 10px;
-    margin: 10px 0px;
     text-align: right;
 }
 
@@ -237,7 +320,6 @@ table tr td {
     width: 60%;
     font-weight: 800;
     letter-spacing: 2px;
-    margin: 10px 100px;
     text-align: center;
     border-radius: 50px;
     background-color: #B5BDBD;
@@ -245,7 +327,7 @@ table tr td {
     color: #F1F1F1;
     font-size: 29px;
 
-}
+} */
 
 /* hide the up and down buttons */
 input[type=number]::-webkit-outer-spin-button,
@@ -256,7 +338,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 
 
-.change {
+/* .change {
     width: 100%;
     display: flex;
     text-align: center;
@@ -283,7 +365,7 @@ input[type=number]::-webkit-inner-spin-button {
     padding: 10px 100px;
     background-color: #B5BDBD;
     border-radius: 50px;
-}
+} */
 
 .confirm {
     width: 100%;
