Added function for Total Sales stored in localstorage

--- a/src/Pages/Dashboard/dashboard.css
+++ b/src/Pages/Dashboard/dashboard.css
@@ -4,37 +4,52 @@
     box-sizing: border-box;
 }
 
-.totalsales {
-    width: 40vw;
-    height: 10vh;
-    position: fixed;
 
+.totalsales {
+    position: absolute;
+    width: 30vw;
+    height: 8vh;
+    top: 8.5vh;
+    left: 8.7vw;
+
+    background-color: #ffff;
+
+    display: flex;
+}
+
+.saleshistory {
+    width: 15vw;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
-
-.totalsales h2 {
-    font-size: 30px;
-    margin-left: 130px;
+.saleshistory h2 {    
     text-transform: uppercase;
-    letter-spacing: 2px;
+
+}
+
+.saleshistory button {
+    border: 0px;
+    margin-bottom: 25px;
+    background-color: white;
+    cursor: pointer;
 }
 
 .totalsales h3 {
-    color: #FFFFFF;
+    width: 15vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #779D27;
+    border-radius: 50px;
     font-size: 25px;
-
-    padding: 10px 50px;
-    margin-left: 30px;
-    border-radius: 30px;
-    letter-spacing: 2px;
-
-    background-color: #52B050;
 }
+
+
+
 
 .table {
     position: fixed;
@@ -391,4 +406,39 @@ input[type=number]::-webkit-inner-spin-button {
 
 .confirm button:hover {
     background-color: #2980b9;
+}
+
+
+/* to be continued soon */
+.salesmodal{
+    color: black;
+    background-color: white;
+    border: 2px solid black;
+
+    width: 30vw;
+    height: 80vh;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    border-radius: 10px;
+
+}
+
+.salesmodal h1{
+    text-align: center;
+    color: black;
+}
+
+.salesmodal p{
+    text-align: right;
+    color: black;
+}
+.salesmodal table {
+    color: #000;
+}
+
+.salesmodal h3 {
+    text-align: right;
 }
