--- a/src/Pages/Dashboard/dashboard.css
+++ b/src/Pages/Dashboard/dashboard.css
@@ -410,7 +410,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 
 /* to be continued soon */
-.salesmodal{
+/* .salesmodal{
     color: black;
     background-color: white;
     border: 2px solid black;
@@ -441,4 +441,4 @@ input[type=number]::-webkit-inner-spin-button {
 
 .salesmodal h3 {
     text-align: right;
-}
+} */
