Revert "Added function for Total Sales stored in localstorage"
This reverts commit 177badbe4733391f2b576181a49ea9bd3a3ea417.

--- a/src/Pages/Dashboard/dashboard.css
+++ b/src/Pages/Dashboard/dashboard.css
@@ -396,7 +396,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 
 /* to be continued soon */
-/* .salesmodal{
+.salesmodal{
     color: black;
     background-color: white;
     border: 2px solid black;
@@ -427,7 +427,4 @@ input[type=number]::-webkit-inner-spin-button {
 
 .salesmodal h3 {
     text-align: right;
-} */
-=======
 }
->>>>>>> parent of 177badb (Added function for Total Sales stored in localstorage)
